app/assets/stylesheets/custom.css.scss
// Place all the styles related to the App controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/*** Layout und Aufbau der Seite:
 *
 * #header (fixed)
 *   #banner
 *   #nav menu <ul>
 *     <li> oder <li.selected>
 * #leftrow
 *   #content
 *     <content> (see: next section)
 * #rightrow (fixed)
 *   <div.rightbox> (<div class="rightbox"><div><div><div>[CONTENT]</div></div></div></div>)
 *   ...
 * footer
*/

/*** Farben:
 *
 * #f6f6f6 (hellgrau)    Content-Hintergr?nde
 * #d9d9d9 (grau)        Hintergrund
 * #737373 (dunkelgrau)  Menu
*/
$hellgrau: #f6f6f6;
$grau: #d9d9d9;
$dunkelgrau: #737373;
$menu_links_inactiv: #F2F2F2;
$menu_links_selected: #999999;
$content_background: #F6F6F6;
$h1_color: #336699;
$h2_color: #ddd;
$nice_button_bg: $h1_color;
$h1_accent_color: #FF8D66 ; // #FFA666;

/*** Allgemeine Regeln ***/

body, html {
    // font-family: Arial, sans-serif;
    font-family: Verdana,Arial,sans-serif; // same as jquery-ui
    background-color: $grau;
    margin-top: -3px;
    font-size: 12px;
}

a {
    font-style: italic;
    color: #000;
    text-decoration: none;
    img {
        vertical-align: middle;
        border: 0 none;
    }
}

a.external { background: image-url("icons/link.png") no-repeat center right; text-decoration:underline; padding-right:18px; }
a.internal { background: image-url("icons/anchor.png") no-repeat center right; text-decoration:underline; padding-right:18px; }

img.help {
  cursor: pointer;
  margin: 0px;
  padding-left: 20px;
}

h1, h2, h3, h4, h5 {
}

#main_page {
    width: 900px;
    margin-top: 5px;
}

#header {
    background-color: $grau;
    height: 95px;
    width: 900px;
}

#logo {
    height:70px;
    width: 900px;
    background: image-url("layout/genepainter-banner-v3.png") no-repeat scroll right top transparent;
}

#nav, ul{
    padding: 0;
    margin: 0;
}

#menu {
    background-color: $dunkelgrau;
    font-size: 12px;
    height: 25px;
    margin: 0;
    padding: 0;
    width: 900px;

    li {
        float: left;
        list-style: none outside none;
        text-align: center;
        a {
            color: $menu_links_inactiv;
            display: block;
            font-style: normal;
            line-height: 25px;
            padding: 0 7px;
        }

        a:hover {
            background-color: $menu_links_selected;
        }
    }

    li.selected a {
        background-color: $menu_links_selected;
        color: black;
    }
}
#submenu {
    background-color: $menu_links_selected;
    font-size: 12px;
    height: 25px;
    margin: 0;
    padding: 0;
    width: 900px;

    li {
        float: left;
        list-style: none outside none;
        text-align: center;
        a {
            color: $menu_links_inactiv;
            display: block;
            font-style: normal;
            line-height: 25px;
            padding: 0 7px;
        }

        a:hover {
            background-color: $grau;
            color: black;
        }
    }

    li.selected a {
        background-color: $grau;
        color: black;
    }
}

#rightside {
    margin-top: 15px;
    width: 150px;
    position:relative;
    float: left;
}

#footer {
    clear: both;
    font-size: 12px;
    margin: 0;
    padding: 5px 0 0;
    text-align: center;
}
#content {
    margin-top: 10px;
    padding: 10px;
    width: 730px;
    min-height: 600px;
    background-color: $content_background;
    text-align: left;
    -moz-border-radius: 20px;
    border-radius: 20px;
    position:relative;
    float: left;

    h1 {
        background: $h1_color; /* Old browsers */
        background: -moz-linear-gradient(left,  $h1_color 0%, $content_background 92%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, right top, color-stop(0%,$h1_color), color-stop(92%,$content_background)); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(left,  $h1_color 0%,$content_background 92%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(left,  $h1_color 0%,$content_background 92%); /* Opera 11.10+ */
        background: -ms-linear-gradient(left,  $h1_color 0%,$content_background 92%); /* IE10+ */
        background: linear-gradient(left,  $h1_color 0%,$content_background 92%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$h1_color', endColorstr='$content_background',GradientType=1 ); /* IE6-9 */

        border-radius: 10px 0 0 0;
        -moz-border-radius-topleft: 10px;
        -moz-border-radius-topright: 0;
        -moz-border-radius-bottomright: 0;
        -moz-border-radius-bottomleft: 0;
        -webkit-border-radius: 10px 0 0 0;
        display: block;
        font-size: 16px;
        font-weight: bold;
        margin: 0px 0px 10px;
        padding: 4px 5px 4px 10px;
        color: white;
    }
    h2 {
        display: block;
        background: $h2_color;
        margin: 10px 0px;
        padding: 3px 10px;
        border: 2px solid $hellgrau;
        border-width: 5px 0px 2px 0px;
        font-weight: bold;
        font-size: 14px;
    }
    h3 {
        display: block;
        // border: 1px solid #aaa;
        border: 1px solid $h1_color;
        border-width: 0px 0px 1px 0px;
        margin: 15px 0px 5px 0px;
        padding: 0px 0px 2px 0px;
        font-weight: bold;
        font-size: 14px;
    }
    h4 {
        display: block;
        font-weight: bold;
        font-size: 14px;
        margin: 15px 0px 5px 0px;
        padding: 0px 0px 2px 0px;
        border: 1px solid $h2_color;
        border-width: 0px 0px 1px 0px;
    }
    div {
        // padding-left: 5px;
    }
}

#results_section {
    position: relative;
    margin-top: 25px;
    padding-left: 0px !important;
}

form.disabled {
    color: $dunkelgrau;
}


.notice {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #ebfdce;
    width: 100%;
    height: 15px;
    color: green;
    margin-bottom: 10px;
    text-align: center;
    padding-top: 5px;
}

#waiting {
    background: rgba(100%,100%,100%,0.5);
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    visibility: visible;
    width: 100%;
    z-index: 1
}

#waiting_infobox {
    background: rgba(0%,0%,0%,0.5);
    border: 1px solid $h1_color;
    border-radius: 15px 15px 15px 15px;
    font-size: 14px;
    text-align: center;
    width: 300px;
    color: white;
}

#errors_container {
    color: red;
}

td, th {
    vertical-align: top;
}
.img_help {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.clearfix {
    overflow: auto;
    zoom: 1;
}

// label {
//   margin-right: 20px;
// }
.manual_species_mapping_left {
  float: left;
  width: 60%;
  overflow: hidden;
}
.manual_species_mapping_right {
  float: left;
  overflow: hidden;
}

.manual_species_mapping {
  float: left;
  margin-right: 20px;
  max-height: 200px;
}
.sequence_names {
  width: 40%;
  overflow: auto;
}
.vertical_line {
    border-left: 1px solid $dunkelgrau;
    padding-left: 10px;
}

div.help {
  display: none;
  background: #FFE4E1;
  margin: 5px;
  padding-top: 10px;
  padding-bottom: 10px
}

div.large_div, #graphical {
  max-height: 400px;
  overflow: auto;
}

div.pattern {
  font-family: Courier;
  height: 320px;
}

div.res_left_col {
  float: left;
  max-height: 400px;
  width: 150px;
}

div.res_height {
  max-height: 300px;
  overflow: auto;
}

// Style for data center and download table
table {
  text-align: left;
  border-collapse: collapse;
}
table.one-column-emphasis td
{
  color: #669;
  border-top: 1px solid #e8edff;
  height: 2em; 
  vertical-align: middle;
}

#unlink_genes_modal tr.with_border {
  border-top: 1px solid #e8edff;
}
tr:hover td {
  color: #339;
  background: #eff2ff;
}
#download .first_col {
  width: 180px;
}
.filename, th {
  color: #336699; //#039
  font-weight: bold;
}
.oce-checkbox-col {
  width: 100px;
  padding-left: 10px
}
.oce-small-text-col {
  width: 120px;
}
.oce-species-col {
  width: 225px;
}
ul.ui-tabs-nav.ui-helper-reset.ui-helper-clearfix.ui-widget-header.ui-corner-all {
  border: 1px solid #aaaaaa;
}

.ui-tabs .ui-tabs-panel {
	padding: 1em 0.4em !important;
  /* apply changes to fit jquery-ui to default layout; OR adjust default layout */
  // font-family: Arial, sans-serif; 
  // font-size: 12px;
}

#text-based tr:hover td {
    background: #ededed; /* to better keep track of the line the mouse is over */
    color:black;
}

// phylogenetic tree
.taxon:hover {
  font-size: 15px !important;
  font-weight: bold;
  font-family: inherit;
  cursor: pointer;
}
#svg_placeholder {
  width: 100%;
  height: 100%;
}
.taxon-highlight {
  font-size: 15px !important;
  font-weight: bold;
  font-family: inherit;
  fill: #336699;
}

// color background table
.highlighted {
  background-color: orange !important;
}

.fill-grey {
  fill: lightgrey;
}

table.mapped_headers td {
  text-align: left !important;
}

table.mapped_headers th {
  padding: 5px 15px !important;
}

.ui-autocomplete-loading {
    background: white image-url("jquery_ui/ui-anim_basic_16x16.gif") right center no-repeat;
}

div.pattern table, div.pattern th, div.pattern td {
  border-spacing: 0;
  color: black;
  font-weight: normal;
}
div.pattern table.with_border td {
  border-left: 1px solid white;
  text-align: center;
}

div.additional_pattern {
  padding-top: 5px;
}

